# PIN-2021-Projet-Final

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/core/: Canvas.cpp  Canvas.h  Scale.cpp  Scale.h  World.cpp  World.h
src/objects/: Object.cpp  Object.h  Particule.cpp  Particule.h  Robot.cpp  Robot.h
src/utils/: Coordinator.cpp  Coordinator.h  Defaults.h  Logger.cpp  Logger.h  Simulator.cpp  Simulator.h  Utils.h  Validator.cpp  Validator.h
src/widgets/: Fl_Center_Scroll.h  MainWindow.cpp  MainWindow.h  WorldWidget.cpp  WorldWidget.h
